Lledo/PFC/parser.out
shift/reduce conflict in state 6 resolved as shift.


Unused terminals:


Grammar

Rule 1     s -> bd bi
Rule 2     bd -> d sl bd
Rule 3     bd -> e d sl bd
Rule 4     bd -> e DTEXT sl
Rule 5     bd -> DTEXT sl
Rule 6     bd -> sl bd
Rule 7     bi -> i sl bi
Rule 8     bi -> e i sl bi
Rule 9     bi -> end sl
Rule 10    bi -> end
Rule 11    bi -> sl bi
Rule 12    e -> ETIQ DP
Rule 13    d -> DWORD enteros
Rule 14    d -> space
Rule 15    d -> DDATA DIRHEX
Rule 16    enteros -> ENTN COMA enteros
Rule 17    enteros -> ENT COMA enteros
Rule 18    enteros -> ENT
Rule 19    enteros -> ENTN
Rule 20    space -> DSPACE ENT
Rule 21    space -> DSPACE
Rule 22    sl -> SL sl
Rule 23    sl -> SL
Rule 24    i -> IADD REG COMA REG COMA REG
Rule 25    i -> IADDI REG COMA REG COMA ENT
Rule 26    i -> ISUB REG COMA REG COMA REG
Rule 27    i -> IAND REG COMA REG COMA REG
Rule 28    i -> IANDI REG COMA REG COMA ENT
Rule 29    i -> IOR REG COMA REG COMA REG
Rule 30    i -> IORI REG COMA REG COMA ENT
Rule 31    i -> ISLL REG COMA REG COMA ENT
Rule 32    i -> ILW REG COMA ENT PA REG PC
Rule 33    i -> ISW REG COMA ENT PA REG PC
Rule 34    i -> IBEQ REG COMA REG COMA ETIQ
Rule 35    i -> IBNE REG COMA REG COMA ETIQ
Rule 36    i -> IJ ETIQ
Rule 37    i -> ILI REG COMA ENT
Rule 38    i -> ILA REG COMA ETIQ
Rule 39    i -> IBGE REG COMA REG COMA ETIQ
Rule 40    i -> IBGEZ REG COMA ETIQ
Rule 41    i -> IBGT REG COMA REG COMA ETIQ
Rule 42    i -> IBGTZ REG COMA ETIQ
Rule 43    i -> IBLE REG COMA REG COMA ETIQ
Rule 44    i -> IBLEZ REG COMA ETIQ
Rule 45    i -> IBLT REG COMA REG COMA ETIQ
Rule 46    i -> IBLTZ REG COMA ETIQ
Rule 47    i -> IADDI REG COMA REG COMA ENTN
Rule 48    i -> IANDI REG COMA REG COMA ENTN
Rule 49    i -> IORI REG COMA REG COMA ENTN
Rule 50    i -> ILW REG COMA ENTN PA REG PC
Rule 51    i -> ISW REG COMA ENTN PA REG PC
Rule 52    i -> ILI REG COMA ENTN
Rule 53    i -> ISLT REG COMA REG COMA REG
Rule 54    i -> ISLTI REG COMA REG COMA ENT
Rule 55    i -> ISEQ REG COMA REG COMA REG
Rule 56    i -> ISGE REG COMA REG COMA REG
Rule 57    i -> ISGT REG COMA REG COMA REG
Rule 58    i -> ISLE REG COMA REG COMA REG
Rule 59    i -> ISNE REG COMA REG COMA REG
Rule 60    end -> DEND

Terminals, with rules where they appear

COMA                 : 16 17 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 33 34 34 35 35 37 38 39 39 40 41 41 42 43 43 44 45 45 46 47 47 48 48 49 49 50 51 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59
DDATA                : 15
DEND                 : 60
DIRHEX               : 15
DP                   : 12
DSPACE               : 20 21
DTEXT                : 4 5
DWORD                : 13
ENT                  : 17 18 20 25 28 30 31 32 33 37 54
ENTN                 : 16 19 47 48 49 50 51 52
ETIQ                 : 12 34 35 36 38 39 40 41 42 43 44 45 46
IADD                 : 24
IADDI                : 25 47
IAND                 : 27
IANDI                : 28 48
IBEQ                 : 34
IBGE                 : 39
IBGEZ                : 40
IBGT                 : 41
IBGTZ                : 42
IBLE                 : 43
IBLEZ                : 44
IBLT                 : 45
IBLTZ                : 46
IBNE                 : 35
IJ                   : 36
ILA                  : 38
ILI                  : 37 52
ILW                  : 32 50
IOR                  : 29
IORI                 : 30 49
ISEQ                 : 55
ISGE                 : 56
ISGT                 : 57
ISLE                 : 58
ISLL                 : 31
ISLT                 : 53
ISLTI                : 54
ISNE                 : 59
ISUB                 : 26
ISW                  : 33 51
PA                   : 32 33 50 51
PC                   : 32 33 50 51
REG                  : 24 24 24 25 25 26 26 26 27 27 27 28 28 29 29 29 30 30 31 31 32 32 33 33 34 34 35 35 37 38 39 39 40 41 41 42 43 43 44 45 45 46 47 47 48 48 49 49 50 50 51 51 52 53 53 53 54 54 55 55 55 56 56 56 57 57 57 58 58 58 59 59 59
SL                   : 22 23
error                : 

Nonterminals, with rules where they appear

bd                   : 1 2 3 6
bi                   : 1 7 8 11
d                    : 2 3
e                    : 3 4 8
end                  : 9 10
enteros              : 13 16 17
i                    : 7 8
s                    : 0
sl                   : 2 3 4 5 6 7 8 9 11 22
space                : 14


Parsing method: LALR


state 0

    (0) S' -> . s
    (1) s -> . bd bi
    (2) bd -> . d sl bd
    (3) bd -> . e d sl bd
    (4) bd -> . e DTEXT sl
    (5) bd -> . DTEXT sl
    (6) bd -> . sl bd
    (13) d -> . DWORD enteros
    (14) d -> . space
    (15) d -> . DDATA DIRHEX
    (12) e -> . ETIQ DP
    (22) sl -> . SL sl
    (23) sl -> . SL
    (20) space -> . DSPACE ENT
    (21) space -> . DSPACE

    DTEXT           shift and go to state 7
    DWORD           shift and go to state 11
    DDATA           shift and go to state 2
    ETIQ            shift and go to state 12
    SL              shift and go to state 6
    DSPACE          shift and go to state 8


    bd                             shift and go to state 1
    e                              shift and go to state 3
    d                              shift and go to state 4
    space                          shift and go to state 5
    s                              shift and go to state 9
    sl                             shift and go to state 10

state 1

    (1) s -> bd . bi
    (7) bi -> . i sl bi
    (8) bi -> . e i sl bi
    (9) bi -> . end sl
    (10) bi -> . end
    (11) bi -> . sl bi
    (24) i -> . IADD REG COMA REG COMA REG
    (25) i -> . IADDI REG COMA REG COMA ENT
    (26) i -> . ISUB REG COMA REG COMA REG
    (27) i -> . IAND REG COMA REG COMA REG
    (28) i -> . IANDI REG COMA REG COMA ENT
    (29) i -> . IOR REG COMA REG COMA REG
    (30) i -> . IORI REG COMA REG COMA ENT
    (31) i -> . ISLL REG COMA REG COMA ENT
    (32) i -> . ILW REG COMA ENT PA REG PC
    (33) i -> . ISW REG COMA ENT PA REG PC
    (34) i -> . IBEQ REG COMA REG COMA ETIQ
    (35) i -> . IBNE REG COMA REG COMA ETIQ
    (36) i -> . IJ ETIQ
    (37) i -> . ILI REG COMA ENT
    (38) i -> . ILA REG COMA ETIQ
    (39) i -> . IBGE REG COMA REG COMA ETIQ
    (40) i -> . IBGEZ REG COMA ETIQ
    (41) i -> . IBGT REG COMA REG COMA ETIQ
    (42) i -> . IBGTZ REG COMA ETIQ
    (43) i -> . IBLE REG COMA REG COMA ETIQ
    (44) i -> . IBLEZ REG COMA ETIQ
    (45) i -> . IBLT REG COMA REG COMA ETIQ
    (46) i -> . IBLTZ REG COMA ETIQ
    (47) i -> . IADDI REG COMA REG COMA ENTN
    (48) i -> . IANDI REG COMA REG COMA ENTN
    (49) i -> . IORI REG COMA REG COMA ENTN
    (50) i -> . ILW REG COMA ENTN PA REG PC
    (51) i -> . ISW REG COMA ENTN PA REG PC
    (52) i -> . ILI REG COMA ENTN
    (53) i -> . ISLT REG COMA REG COMA REG
    (54) i -> . ISLTI REG COMA REG COMA ENT
    (55) i -> . ISEQ REG COMA REG COMA REG
    (56) i -> . ISGE REG COMA REG COMA REG
    (57) i -> . ISGT REG COMA REG COMA REG
    (58) i -> . ISLE REG COMA REG COMA REG
    (59) i -> . ISNE REG COMA REG COMA REG
    (12) e -> . ETIQ DP
    (60) end -> . DEND
    (22) sl -> . SL sl
    (23) sl -> . SL

    IADD            shift and go to state 25
    IADDI           shift and go to state 15
    ISUB            shift and go to state 26
    IAND            shift and go to state 13
    IANDI           shift and go to state 14
    IOR             shift and go to state 28
    IORI            shift and go to state 33
    ISLL            shift and go to state 45
    ILW             shift and go to state 22
    ISW             shift and go to state 19
    IBEQ            shift and go to state 48
    IBNE            shift and go to state 20
    IJ              shift and go to state 37
    ILI             shift and go to state 21
    ILA             shift and go to state 18
    IBGE            shift and go to state 41
    IBGEZ           shift and go to state 30
    IBGT            shift and go to state 29
    IBGTZ           shift and go to state 38
    IBLE            shift and go to state 23
    IBLEZ           shift and go to state 44
    IBLT            shift and go to state 17
    IBLTZ           shift and go to state 24
    ISLT            shift and go to state 43
    ISLTI           shift and go to state 34
    ISEQ            shift and go to state 32
    ISGE            shift and go to state 39
    ISGT            shift and go to state 36
    ISLE            shift and go to state 47
    ISNE            shift and go to state 16
    ETIQ            shift and go to state 12
    DEND            shift and go to state 31
    SL              shift and go to state 6


    end                            shift and go to state 27
    i                              shift and go to state 42
    bi                             shift and go to state 35
    sl                             shift and go to state 46
    e                              shift and go to state 40

state 2

    (15) d -> DDATA . DIRHEX

    DIRHEX          shift and go to state 49



state 3

    (3) bd -> e . d sl bd
    (4) bd -> e . DTEXT sl
    (13) d -> . DWORD enteros
    (14) d -> . space
    (15) d -> . DDATA DIRHEX
    (20) space -> . DSPACE ENT
    (21) space -> . DSPACE

    DTEXT           shift and go to state 51
    DWORD           shift and go to state 11
    DDATA           shift and go to state 2
    DSPACE          shift and go to state 8


    d                              shift and go to state 50
    space                          shift and go to state 5

state 4

    (2) bd -> d . sl bd
    (22) sl -> . SL sl
    (23) sl -> . SL

    SL              shift and go to state 6


    sl                             shift and go to state 52

state 5

    (14) d -> space .

    SL              reduce using rule 14 (d -> space .)



state 6

    (22) sl -> SL . sl
    (23) sl -> SL .
    (22) sl -> . SL sl
    (23) sl -> . SL

  ! shift/reduce conflict for SL resolved as shift.
    IADD            reduce using rule 23 (sl -> SL .)
    IADDI           reduce using rule 23 (sl -> SL .)
    ISUB            reduce using rule 23 (sl -> SL .)
    IAND            reduce using rule 23 (sl -> SL .)
    IANDI           reduce using rule 23 (sl -> SL .)
    IOR             reduce using rule 23 (sl -> SL .)
    IORI            reduce using rule 23 (sl -> SL .)
    ISLL            reduce using rule 23 (sl -> SL .)
    ILW             reduce using rule 23 (sl -> SL .)
    ISW             reduce using rule 23 (sl -> SL .)
    IBEQ            reduce using rule 23 (sl -> SL .)
    IBNE            reduce using rule 23 (sl -> SL .)
    IJ              reduce using rule 23 (sl -> SL .)
    ILI             reduce using rule 23 (sl -> SL .)
    ILA             reduce using rule 23 (sl -> SL .)
    IBGE            reduce using rule 23 (sl -> SL .)
    IBGEZ           reduce using rule 23 (sl -> SL .)
    IBGT            reduce using rule 23 (sl -> SL .)
    IBGTZ           reduce using rule 23 (sl -> SL .)
    IBLE            reduce using rule 23 (sl -> SL .)
    IBLEZ           reduce using rule 23 (sl -> SL .)
    IBLT            reduce using rule 23 (sl -> SL .)
    IBLTZ           reduce using rule 23 (sl -> SL .)
    ISLT            reduce using rule 23 (sl -> SL .)
    ISLTI           reduce using rule 23 (sl -> SL .)
    ISEQ            reduce using rule 23 (sl -> SL .)
    ISGE            reduce using rule 23 (sl -> SL .)
    ISGT            reduce using rule 23 (sl -> SL .)
    ISLE            reduce using rule 23 (sl -> SL .)
    ISNE            reduce using rule 23 (sl -> SL .)
    ETIQ            reduce using rule 23 (sl -> SL .)
    DEND            reduce using rule 23 (sl -> SL .)
    DTEXT           reduce using rule 23 (sl -> SL .)
    DWORD           reduce using rule 23 (sl -> SL .)
    DDATA           reduce using rule 23 (sl -> SL .)
    DSPACE          reduce using rule 23 (sl -> SL .)
    $end            reduce using rule 23 (sl -> SL .)
    SL              shift and go to state 6

  ! SL              [ reduce using rule 23 (sl -> SL .) ]

    sl                             shift and go to state 53

state 7

    (5) bd -> DTEXT . sl
    (22) sl -> . SL sl
    (23) sl -> . SL

    SL              shift and go to state 6


    sl                             shift and go to state 54

state 8

    (20) space -> DSPACE . ENT
    (21) space -> DSPACE .

    ENT             shift and go to state 55
    SL              reduce using rule 21 (space -> DSPACE .)



state 9

    (0) S' -> s .




state 10

    (6) bd -> sl . bd
    (2) bd -> . d sl bd
    (3) bd -> . e d sl bd
    (4) bd -> . e DTEXT sl
    (5) bd -> . DTEXT sl
    (6) bd -> . sl bd
    (13) d -> . DWORD enteros
    (14) d -> . space
    (15) d -> . DDATA DIRHEX
    (12) e -> . ETIQ DP
    (22) sl -> . SL sl
    (23) sl -> . SL
    (20) space -> . DSPACE ENT
    (21) space -> . DSPACE

    DTEXT           shift and go to state 7
    DWORD           shift and go to state 11
    DDATA           shift and go to state 2
    ETIQ            shift and go to state 12
    SL              shift and go to state 6
    DSPACE          shift and go to state 8


    bd                             shift and go to state 56
    e                              shift and go to state 3
    d                              shift and go to state 4
    space                          shift and go to state 5
    sl                             shift and go to state 10

state 11

    (13) d -> DWORD . enteros
    (16) enteros -> . ENTN COMA enteros
    (17) enteros -> . ENT COMA enteros
    (18) enteros -> . ENT
    (19) enteros -> . ENTN

    ENTN            shift and go to state 57
    ENT             shift and go to state 58


    enteros                        shift and go to state 59

state 12

    (12) e -> ETIQ . DP

    DP              shift and go to state 60



state 13

    (27) i -> IAND . REG COMA REG COMA REG

    REG             shift and go to state 61



state 14

    (28) i -> IANDI . REG COMA REG COMA ENT
    (48) i -> IANDI . REG COMA REG COMA ENTN

    REG             shift and go to state 62



state 15

    (25) i -> IADDI . REG COMA REG COMA ENT
    (47) i -> IADDI . REG COMA REG COMA ENTN

    REG             shift and go to state 63



state 16

    (59) i -> ISNE . REG COMA REG COMA REG

    REG             shift and go to state 64



state 17

    (45) i -> IBLT . REG COMA REG COMA ETIQ

    REG             shift and go to state 65



state 18

    (38) i -> ILA . REG COMA ETIQ

    REG             shift and go to state 66



state 19

    (33) i -> ISW . REG COMA ENT PA REG PC
    (51) i -> ISW . REG COMA ENTN PA REG PC

    REG             shift and go to state 67



state 20

    (35) i -> IBNE . REG COMA REG COMA ETIQ

    REG             shift and go to state 68



state 21

    (37) i -> ILI . REG COMA ENT
    (52) i -> ILI . REG COMA ENTN

    REG             shift and go to state 69



state 22

    (32) i -> ILW . REG COMA ENT PA REG PC
    (50) i -> ILW . REG COMA ENTN PA REG PC

    REG             shift and go to state 70



state 23

    (43) i -> IBLE . REG COMA REG COMA ETIQ

    REG             shift and go to state 71



state 24

    (46) i -> IBLTZ . REG COMA ETIQ

    REG             shift and go to state 72



state 25

    (24) i -> IADD . REG COMA REG COMA REG

    REG             shift and go to state 73



state 26

    (26) i -> ISUB . REG COMA REG COMA REG

    REG             shift and go to state 74



state 27

    (9) bi -> end . sl
    (10) bi -> end .
    (22) sl -> . SL sl
    (23) sl -> . SL

    $end            reduce using rule 10 (bi -> end .)
    SL              shift and go to state 6


    sl                             shift and go to state 75

state 28

    (29) i -> IOR . REG COMA REG COMA REG

    REG             shift and go to state 76



state 29

    (41) i -> IBGT . REG COMA REG COMA ETIQ

    REG             shift and go to state 77



state 30

    (40) i -> IBGEZ . REG COMA ETIQ

    REG             shift and go to state 78



state 31

    (60) end -> DEND .

    SL              reduce using rule 60 (end -> DEND .)
    $end            reduce using rule 60 (end -> DEND .)



state 32

    (55) i -> ISEQ . REG COMA REG COMA REG

    REG             shift and go to state 79



state 33

    (30) i -> IORI . REG COMA REG COMA ENT
    (49) i -> IORI . REG COMA REG COMA ENTN

    REG             shift and go to state 80



state 34

    (54) i -> ISLTI . REG COMA REG COMA ENT

    REG             shift and go to state 81



state 35

    (1) s -> bd bi .

    $end            reduce using rule 1 (s -> bd bi .)



state 36

    (57) i -> ISGT . REG COMA REG COMA REG

    REG             shift and go to state 82



state 37

    (36) i -> IJ . ETIQ

    ETIQ            shift and go to state 83



state 38

    (42) i -> IBGTZ . REG COMA ETIQ

    REG             shift and go to state 84



state 39

    (56) i -> ISGE . REG COMA REG COMA REG

    REG             shift and go to state 85



state 40

    (8) bi -> e . i sl bi
    (24) i -> . IADD REG COMA REG COMA REG
    (25) i -> . IADDI REG COMA REG COMA ENT
    (26) i -> . ISUB REG COMA REG COMA REG
    (27) i -> . IAND REG COMA REG COMA REG
    (28) i -> . IANDI REG COMA REG COMA ENT
    (29) i -> . IOR REG COMA REG COMA REG
    (30) i -> . IORI REG COMA REG COMA ENT
    (31) i -> . ISLL REG COMA REG COMA ENT
    (32) i -> . ILW REG COMA ENT PA REG PC
    (33) i -> . ISW REG COMA ENT PA REG PC
    (34) i -> . IBEQ REG COMA REG COMA ETIQ
    (35) i -> . IBNE REG COMA REG COMA ETIQ
    (36) i -> . IJ ETIQ
    (37) i -> . ILI REG COMA ENT
    (38) i -> . ILA REG COMA ETIQ
    (39) i -> . IBGE REG COMA REG COMA ETIQ
    (40) i -> . IBGEZ REG COMA ETIQ
    (41) i -> . IBGT REG COMA REG COMA ETIQ
    (42) i -> . IBGTZ REG COMA ETIQ
    (43) i -> . IBLE REG COMA REG COMA ETIQ
    (44) i -> . IBLEZ REG COMA ETIQ
    (45) i -> . IBLT REG COMA REG COMA ETIQ
    (46) i -> . IBLTZ REG COMA ETIQ
    (47) i -> . IADDI REG COMA REG COMA ENTN
    (48) i -> . IANDI REG COMA REG COMA ENTN
    (49) i -> . IORI REG COMA REG COMA ENTN
    (50) i -> . ILW REG COMA ENTN PA REG PC
    (51) i -> . ISW REG COMA ENTN PA REG PC
    (52) i -> . ILI REG COMA ENTN
    (53) i -> . ISLT REG COMA REG COMA REG
    (54) i -> . ISLTI REG COMA REG COMA ENT
    (55) i -> . ISEQ REG COMA REG COMA REG
    (56) i -> . ISGE REG COMA REG COMA REG
    (57) i -> . ISGT REG COMA REG COMA REG
    (58) i -> . ISLE REG COMA REG COMA REG
    (59) i -> . ISNE REG COMA REG COMA REG

    IADD            shift and go to state 25
    IADDI           shift and go to state 15
    ISUB            shift and go to state 26
    IAND            shift and go to state 13
    IANDI           shift and go to state 14
    IOR             shift and go to state 28
    IORI            shift and go to state 33
    ISLL            shift and go to state 45
    ILW             shift and go to state 22
    ISW             shift and go to state 19
    IBEQ            shift and go to state 48
    IBNE            shift and go to state 20
    IJ              shift and go to state 37
    ILI             shift and go to state 21
    ILA             shift and go to state 18
    IBGE            shift and go to state 41
    IBGEZ           shift and go to state 30
    IBGT            shift and go to state 29
    IBGTZ           shift and go to state 38
    IBLE            shift and go to state 23
    IBLEZ           shift and go to state 44
    IBLT            shift and go to state 17
    IBLTZ           shift and go to state 24
    ISLT            shift and go to state 43
    ISLTI           shift and go to state 34
    ISEQ            shift and go to state 32
    ISGE            shift and go to state 39
    ISGT            shift and go to state 36
    ISLE            shift and go to state 47
    ISNE            shift and go to state 16


    i                              shift and go to state 86

state 41

    (39) i -> IBGE . REG COMA REG COMA ETIQ

    REG             shift and go to state 87



state 42

    (7) bi -> i . sl bi
    (22) sl -> . SL sl
    (23) sl -> . SL

    SL              shift and go to state 6


    sl                             shift and go to state 88

state 43

    (53) i -> ISLT . REG COMA REG COMA REG

    REG             shift and go to state 89



state 44

    (44) i -> IBLEZ . REG COMA ETIQ

    REG             shift and go to state 90



state 45

    (31) i -> ISLL . REG COMA REG COMA ENT

    REG             shift and go to state 91



state 46

    (11) bi -> sl . bi
    (7) bi -> . i sl bi
    (8) bi -> . e i sl bi
    (9) bi -> . end sl
    (10) bi -> . end
    (11) bi -> . sl bi
    (24) i -> . IADD REG COMA REG COMA REG
    (25) i -> . IADDI REG COMA REG COMA ENT
    (26) i -> . ISUB REG COMA REG COMA REG
    (27) i -> . IAND REG COMA REG COMA REG
    (28) i -> . IANDI REG COMA REG COMA ENT
    (29) i -> . IOR REG COMA REG COMA REG
    (30) i -> . IORI REG COMA REG COMA ENT
    (31) i -> . ISLL REG COMA REG COMA ENT
    (32) i -> . ILW REG COMA ENT PA REG PC
    (33) i -> . ISW REG COMA ENT PA REG PC
    (34) i -> . IBEQ REG COMA REG COMA ETIQ
    (35) i -> . IBNE REG COMA REG COMA ETIQ
    (36) i -> . IJ ETIQ
    (37) i -> . ILI REG COMA ENT
    (38) i -> . ILA REG COMA ETIQ
    (39) i -> . IBGE REG COMA REG COMA ETIQ
    (40) i -> . IBGEZ REG COMA ETIQ
    (41) i -> . IBGT REG COMA REG COMA ETIQ
    (42) i -> . IBGTZ REG COMA ETIQ
    (43) i -> . IBLE REG COMA REG COMA ETIQ
    (44) i -> . IBLEZ REG COMA ETIQ
    (45) i -> . IBLT REG COMA REG COMA ETIQ
    (46) i -> . IBLTZ REG COMA ETIQ
    (47) i -> . IADDI REG COMA REG COMA ENTN
    (48) i -> . IANDI REG COMA REG COMA ENTN
    (49) i -> . IORI REG COMA REG COMA ENTN
    (50) i -> . ILW REG COMA ENTN PA REG PC
    (51) i -> . ISW REG COMA ENTN PA REG PC
    (52) i -> . ILI REG COMA ENTN
    (53) i -> . ISLT REG COMA REG COMA REG
    (54) i -> . ISLTI REG COMA REG COMA ENT
    (55) i -> . ISEQ REG COMA REG COMA REG
    (56) i -> . ISGE REG COMA REG COMA REG
    (57) i -> . ISGT REG COMA REG COMA REG
    (58) i -> . ISLE REG COMA REG COMA REG
    (59) i -> . ISNE REG COMA REG COMA REG
    (12) e -> . ETIQ DP
    (60) end -> . DEND
    (22) sl -> . SL sl
    (23) sl -> . SL

    IADD            shift and go to state 25
    IADDI           shift and go to state 15
    ISUB            shift and go to state 26
    IAND            shift and go to state 13
    IANDI           shift and go to state 14
    IOR             shift and go to state 28
    IORI            shift and go to state 33
    ISLL            shift and go to state 45
    ILW             shift and go to state 22
    ISW             shift and go to state 19
    IBEQ            shift and go to state 48
    IBNE            shift and go to state 20
    IJ              shift and go to state 37
    ILI             shift and go to state 21
    ILA             shift and go to state 18
    IBGE            shift and go to state 41
    IBGEZ           shift and go to state 30
    IBGT            shift and go to state 29
    IBGTZ           shift and go to state 38
    IBLE            shift and go to state 23
    IBLEZ           shift and go to state 44
    IBLT            shift and go to state 17
    IBLTZ           shift and go to state 24
    ISLT            shift and go to state 43
    ISLTI           shift and go to state 34
    ISEQ            shift and go to state 32
    ISGE            shift and go to state 39
    ISGT            shift and go to state 36
    ISLE            shift and go to state 47
    ISNE            shift and go to state 16
    ETIQ            shift and go to state 12
    DEND            shift and go to state 31
    SL              shift and go to state 6


    i                              shift and go to state 42
    end                            shift and go to state 27
    e                              shift and go to state 40
    bi                             shift and go to state 92
    sl                             shift and go to state 46

state 47

    (58) i -> ISLE . REG COMA REG COMA REG

    REG             shift and go to state 93



state 48

    (34) i -> IBEQ . REG COMA REG COMA ETIQ

    REG             shift and go to state 94



state 49

    (15) d -> DDATA DIRHEX .

    SL              reduce using rule 15 (d -> DDATA DIRHEX .)



state 50

    (3) bd -> e d . sl bd
    (22) sl -> . SL sl
    (23) sl -> . SL

    SL              shift and go to state 6


    sl                             shift and go to state 95

state 51

    (4) bd -> e DTEXT . sl
    (22) sl -> . SL sl
    (23) sl -> . SL

    SL              shift and go to state 6


    sl                             shift and go to state 96

state 52

    (2) bd -> d sl . bd
    (2) bd -> . d sl bd
    (3) bd -> . e d sl bd
    (4) bd -> . e DTEXT sl
    (5) bd -> . DTEXT sl
    (6) bd -> . sl bd
    (13) d -> . DWORD enteros
    (14) d -> . space
    (15) d -> . DDATA DIRHEX
    (12) e -> . ETIQ DP
    (22) sl -> . SL sl
    (23) sl -> . SL
    (20) space -> . DSPACE ENT
    (21) space -> . DSPACE

    DTEXT           shift and go to state 7
    DWORD           shift and go to state 11
    DDATA           shift and go to state 2
    ETIQ            shift and go to state 12
    SL              shift and go to state 6
    DSPACE          shift and go to state 8


    bd                             shift and go to state 97
    e                              shift and go to state 3
    d                              shift and go to state 4
    space                          shift and go to state 5
    sl                             shift and go to state 10

state 53

    (22) sl -> SL sl .

    IADD            reduce using rule 22 (sl -> SL sl .)
    IADDI           reduce using rule 22 (sl -> SL sl .)
    ISUB            reduce using rule 22 (sl -> SL sl .)
    IAND            reduce using rule 22 (sl -> SL sl .)
    IANDI           reduce using rule 22 (sl -> SL sl .)
    IOR             reduce using rule 22 (sl -> SL sl .)
    IORI            reduce using rule 22 (sl -> SL sl .)
    ISLL            reduce using rule 22 (sl -> SL sl .)
    ILW             reduce using rule 22 (sl -> SL sl .)
    ISW             reduce using rule 22 (sl -> SL sl .)
    IBEQ            reduce using rule 22 (sl -> SL sl .)
    IBNE            reduce using rule 22 (sl -> SL sl .)
    IJ              reduce using rule 22 (sl -> SL sl .)
    ILI             reduce using rule 22 (sl -> SL sl .)
    ILA             reduce using rule 22 (sl -> SL sl .)
    IBGE            reduce using rule 22 (sl -> SL sl .)
    IBGEZ           reduce using rule 22 (sl -> SL sl .)
    IBGT            reduce using rule 22 (sl -> SL sl .)
    IBGTZ           reduce using rule 22 (sl -> SL sl .)
    IBLE            reduce using rule 22 (sl -> SL sl .)
    IBLEZ           reduce using rule 22 (sl -> SL sl .)
    IBLT            reduce using rule 22 (sl -> SL sl .)
    IBLTZ           reduce using rule 22 (sl -> SL sl .)
    ISLT            reduce using rule 22 (sl -> SL sl .)
    ISLTI           reduce using rule 22 (sl -> SL sl .)
    ISEQ            reduce using rule 22 (sl -> SL sl .)
    ISGE            reduce using rule 22 (sl -> SL sl .)
    ISGT            reduce using rule 22 (sl -> SL sl .)
    ISLE            reduce using rule 22 (sl -> SL sl .)
    ISNE            reduce using rule 22 (sl -> SL sl .)
    ETIQ            reduce using rule 22 (sl -> SL sl .)
    DEND            reduce using rule 22 (sl -> SL sl .)
    SL              reduce using rule 22 (sl -> SL sl .)
    DTEXT           reduce using rule 22 (sl -> SL sl .)
    DWORD           reduce using rule 22 (sl -> SL sl .)
    DDATA           reduce using rule 22 (sl -> SL sl .)
    DSPACE          reduce using rule 22 (sl -> SL sl .)
    $end            reduce using rule 22 (sl -> SL sl .)



state 54

    (5) bd -> DTEXT sl .

    IADD            reduce using rule 5 (bd -> DTEXT sl .)
    IADDI           reduce using rule 5 (bd -> DTEXT sl .)
    ISUB            reduce using rule 5 (bd -> DTEXT sl .)
    IAND            reduce using rule 5 (bd -> DTEXT sl .)
    IANDI           reduce using rule 5 (bd -> DTEXT sl .)
    IOR             reduce using rule 5 (bd -> DTEXT sl .)
    IORI            reduce using rule 5 (bd -> DTEXT sl .)
    ISLL            reduce using rule 5 (bd -> DTEXT sl .)
    ILW             reduce using rule 5 (bd -> DTEXT sl .)
    ISW             reduce using rule 5 (bd -> DTEXT sl .)
    IBEQ            reduce using rule 5 (bd -> DTEXT sl .)
    IBNE            reduce using rule 5 (bd -> DTEXT sl .)
    IJ              reduce using rule 5 (bd -> DTEXT sl .)
    ILI             reduce using rule 5 (bd -> DTEXT sl .)
    ILA             reduce using rule 5 (bd -> DTEXT sl .)
    IBGE            reduce using rule 5 (bd -> DTEXT sl .)
    IBGEZ           reduce using rule 5 (bd -> DTEXT sl .)
    IBGT            reduce using rule 5 (bd -> DTEXT sl .)
    IBGTZ           reduce using rule 5 (bd -> DTEXT sl .)
    IBLE            reduce using rule 5 (bd -> DTEXT sl .)
    IBLEZ           reduce using rule 5 (bd -> DTEXT sl .)
    IBLT            reduce using rule 5 (bd -> DTEXT sl .)
    IBLTZ           reduce using rule 5 (bd -> DTEXT sl .)
    ISLT            reduce using rule 5 (bd -> DTEXT sl .)
    ISLTI           reduce using rule 5 (bd -> DTEXT sl .)
    ISEQ            reduce using rule 5 (bd -> DTEXT sl .)
    ISGE            reduce using rule 5 (bd -> DTEXT sl .)
    ISGT            reduce using rule 5 (bd -> DTEXT sl .)
    ISLE            reduce using rule 5 (bd -> DTEXT sl .)
    ISNE            reduce using rule 5 (bd -> DTEXT sl .)
    ETIQ            reduce using rule 5 (bd -> DTEXT sl .)
    DEND            reduce using rule 5 (bd -> DTEXT sl .)
    SL              reduce using rule 5 (bd -> DTEXT sl .)



state 55

    (20) space -> DSPACE ENT .

    SL              reduce using rule 20 (space -> DSPACE ENT .)



state 56

    (6) bd -> sl bd .
